# CraniumFuck

./: .clang-format  CMakeLists.txt  README.md
examples/: fibonacci.cf  putchar.cf
src/: config.h  lexer.c  lexer.h  main.c  pphelper.c  preprocessor.c  preprocessor.h  token.c  token.h  version.h
src/argument/: args.c  args.h
src/ir/: ir.c  ir.h
src/lexer/: lexer.c  lexer.h  lexerutil.c  lexerutil.h  token.c  token.h
src/parser/: evamath.h  expression.c  expression.h  node.c  node.h  parser.c  parser.h  parsing.c  parsing.h
src/preprocessor/: pphelper.c  pphelper.h  preprocessor.c  preprocessor.h
src/util/: error.c  error.h  helper.c  helper.h
